--- a/src/components/Wheel/index.css
+++ b/src/components/Wheel/index.css
@@ -5,7 +5,7 @@
     --wheel-size: 280px;
     --wheel-slice-spacing: 25px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -14,7 +14,7 @@
     --nb-turn: 5;
     --spinning-duration: 10s;
     --reset-duration: 0.25s;
-    --font-size:0.5rem
+    --font-size:10px
   }
 }
 
@@ -24,7 +24,7 @@
     --wheel-size: 350px;
     --wheel-slice-spacing: 25px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -33,7 +33,7 @@
     --nb-turn: 5;
     --spinning-duration: 10s;
     --reset-duration: 0.25s;
-    --font-size:0.5rem
+    --font-size:10px
   }
 }
 
@@ -43,7 +43,7 @@
     --wheel-size: 400px;
     --wheel-slice-spacing: 30px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -62,7 +62,7 @@
     --wheel-size: 450px;
     --wheel-slice-spacing: 30px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -81,7 +81,7 @@
     --wheel-size: 500px;
     --wheel-slice-spacing: 35px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -99,7 +99,7 @@
     --wheel-size: 500px;
     --wheel-slice-spacing: 35px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -121,7 +121,7 @@
     --wheel-size: 530px;
     --wheel-slice-spacing: 50px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -142,7 +142,7 @@
     --wheel-size: 430px;
     --wheel-slice-spacing: 50px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -160,7 +160,7 @@
     --wheel-size: 530px;
     --wheel-slice-spacing: 50px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -178,7 +178,7 @@
     --wheel-size: 630px;
     --wheel-slice-spacing: 50px;
     --wheel-border-size: 5px;
-    --wheel-color: #d38c12;
+    --wheel-color: #E50303;
     --neutral-color: white;
     --PI: 3.14159265358979;
     --nb-item: 0;
@@ -287,6 +287,7 @@
   text-align: right;
   padding: 0 25px 0 50px;
   font-family: var(--wheel-font);
+  font-size: var(--font-size);
 }
 
 .wheel-item:before {
@@ -311,5 +312,6 @@
   border: solid transparent calc(var(--slice-width) / 2);
   border-left: solid transparent 0;
   border-right: solid var(--neutral-color) calc(var(--wheel-size) / 2);
+  
 }
 
